--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ node_modules/
 terraform/.terraform/
 terraform/k8s-hirva-3ccb798c8225.json
 terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
