--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,11 +23,11 @@ steps:
       - 'build'
       - '-t'
       - '${_ARTIFACT_REGISTRY}/container1:latest'
-      - '-t'
-      - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
+      # - '-t'
+      # - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
       - '-f'
       - 'container1/Dockerfile'
-      - 'container1/'
+      # - 'container1/'
 
   # Push c1 to AR
   - name: 'gcr.io/cloud-builders/docker'
@@ -36,11 +36,11 @@ steps:
       - 'push'
       - '${_ARTIFACT_REGISTRY}/container1:latest'
 
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'Push Container1 (SHA)'
-    args:
-      - 'push'
-      - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   id: 'Push Container1 (SHA)'
+  #   args:
+  #     - 'push'
+  #     - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
 
   # Step 2: Build and push Container2 image
   # Build c2
@@ -50,11 +50,11 @@ steps:
       - 'build'
       - '-t'
       - '${_ARTIFACT_REGISTRY}/container2:latest'
-      - '-t'
-      - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
+      # - '-t'
+      # - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
       - '-f'
       - 'container2/Dockerfile'
-      - 'container2/'
+      # - 'container2/'
 
   # Push c2 to AR
   - name: 'gcr.io/cloud-builders/docker'
@@ -63,11 +63,11 @@ steps:
       - 'push'
       - '${_ARTIFACT_REGISTRY}/container2:latest'
 
-  - name: 'gcr.io/cloud-builders/docker'
-    id: 'Push Container2 (SHA)'
-    args:
-      - 'push'
-      - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
+  # - name: 'gcr.io/cloud-builders/docker'
+  #   id: 'Push Container2 (SHA)'
+  #   args:
+  #     - 'push'
+  #     - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
 
   # Step 3: Deploy to GKE
   - name: 'gcr.io/cloud-builders/kubectl'
@@ -82,8 +82,8 @@ steps:
 
 # Define the artifacts (Docker images) to be stored in Artifact Registry
 images:
-  - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
-  - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
+  - '${_ARTIFACT_REGISTRY}/container1:latest'
+  - '${_ARTIFACT_REGISTRY}/container2:latest'
 
 # Define the trigger for the pipeline
 # trigger:
