--- a/k8s/container1-k8config.yaml
+++ b/k8s/container1-k8config.yaml
@@ -29,6 +29,7 @@ spec:
       containers:
       - name: container1
         image: us-central1-docker.pkg.dev/k8s-hirva/kube-repo/container1:latest #url to docker img
+        imagePullPolicy: Always
         ports:
         - containerPort: 6000
         volumeMounts:
