--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -23,10 +23,6 @@ steps:
       - 'build'
       - '-t'
       - '${_ARTIFACT_REGISTRY}/container1:latest'
-      # - '-t'
-      # - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
-      # - '-f'
-      # - 'container1/Dockerfile'
       - 'container1/'
 
   # Push c1 to AR
@@ -36,12 +32,6 @@ steps:
       - 'push'
       - '${_ARTIFACT_REGISTRY}/container1:latest'
 
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   id: 'Push Container1 (SHA)'
-  #   args:
-  #     - 'push'
-  #     - '${_ARTIFACT_REGISTRY}/container1:${_SHORT_SHA}'
-
   # Step 2: Build and push Container2 image
   # Build c2
   - name: 'gcr.io/cloud-builders/docker'
@@ -50,10 +40,6 @@ steps:
       - 'build'
       - '-t'
       - '${_ARTIFACT_REGISTRY}/container2:latest'
-      # - '-t'
-      # - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
-      # - '-f'
-      # - 'container2/Dockerfile'
       - 'container2/'
 
   # Push c2 to AR
@@ -63,11 +49,6 @@ steps:
       - 'push'
       - '${_ARTIFACT_REGISTRY}/container2:latest'
 
-  # - name: 'gcr.io/cloud-builders/docker'
-  #   id: 'Push Container2 (SHA)'
-  #   args:
-  #     - 'push'
-  #     - '${_ARTIFACT_REGISTRY}/container2:${_SHORT_SHA}'
   # Step 3: Deploy to GKE
   - name: 'gcr.io/cloud-builders/kubectl'
     id: 'Deploy to GKE'
@@ -79,6 +60,7 @@ steps:
       - 'CLOUDSDK_COMPUTE_ZONE=${_GKE_ZONE}'
       - 'CLOUDSDK_CONTAINER_CLUSTER=${_GKE_CLUSTER}'
     
+  # Step 4: Kubectl Restart Deployment  
   - name: "gcr.io/cloud-builders/kubectl"
     entrypoint: "bash"
     args:
@@ -86,12 +68,3 @@ steps:
       - |
         kubectl rollout restart deployment container1-deployment
         kubectl rollout restart deployment container2-deployment
-
-# Define the artifacts (Docker images) to be stored in Artifact Registry
-# images:
-#   - '${_ARTIFACT_REGISTRY}/container1:latest'
-#   - '${_ARTIFACT_REGISTRY}/container2:latest'
-
-# Define the trigger for the pipeline
-# trigger:
-#  branch: main  # Trigger the pipeline when changes are pushed to the 'main' branch
